GET /projects implemented
